force-app/main/default/objects/Gatherica_Event__c/Gatherica_Event__c.object-meta.xml
<CustomObject>
    <label>Gatherica Event</label>
    <nameField>
        <label>Gatherica Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gatherica Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>