force-app/main/default/objects/Gatherica_Event__c/fields/completed__c.field-meta.xml
<CustomField>
    <fullName>completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>completed</label>
    <type>Checkbox</type>
</CustomField>