force-app/main/default/objects/Gatherica_Event__c/fields/contact_Email__c.field-meta.xml
<CustomField>
    <fullName>contact_Email__c</fullName>
    <label>contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>