force-app/main/default/objects/Gatherica_Event__c/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education &amp; Learning</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Culture</fullName>
            </value>
            <value>
                <fullName>Business &amp; Professional</fullName>
            </value>
            <value>
                <fullName>Health &amp; Wellness</fullName>
            </value>
            <value>
                <fullName>Social &amp; Community</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Innovation</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Family &amp; Kids</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Adventure</fullName>
            </value>
            <value>
                <fullName>Lifestyle &amp; Fashion</fullName>
            </value>
            <value>
                <fullName>Music &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Science &amp; Nature</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>