force-app/main/default/objects/Gatherica_Event__c/fields/Event_Publisher__c.field-meta.xml
<CustomField>
    <fullName>Event_Publisher__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Publisher</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gatherica Events</relationshipLabel>
    <relationshipName>Gatherica_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>