force-app/main/default/objects/Gatherica_Event__c/fields/External_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Website_URL__c</fullName>
    <label>External Website URL</label>
    <type>Url</type>
</CustomField>