force-app/main/default/objects/Gatherica_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>completed__c</columns>
    <columns>contact_Email__c</columns>
    <columns>Event_Category__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Publisher__c</columns>
    <columns>Event_Status__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>